view structure update, passport setup
